notes/grammar.txt
    /* Grammar for Luky language
     
     * Grammar for all operators
     * Date: Mon, 21/09/2020
     *
    * program     → declaration* EOF ;
    *
    * declaration → classDecl
    *       | funDecl
    *       | VarDecl
    *       | statement ;
    *
    * classDecl → "class" IDENTIFIER ( "<" IDENTIFIER )?
    *        "{" function* "}" ;
    *
    * funDecl  → "fun" function ;
    *
    * function → IDENTIFIER "(" functionBody ")" ;
    *
    * functionBody → "(" parameters? ")" block ;
    *
    * parameters → IDENTIFIER ( "," IDENTIFIER )* ;
    *
    * varDecl → "var" IDENTIFIER ( "=" expression )? ";" ;
    *
    * statement → exprStmt
    *           | forStmt
    *           | ifStmt
    *           | printStmt
    *           | returnStmt
    *           | whileStmt
    *           | breakStmt
    *           | continueStmt
    *           | block ;
    *
    * exprStmt  → expression ";" ;
    *
    *  forStmt   → "for" "(" ( varDecl | exprStmt | ";" )
    *                  ( expression )? ";"
    *                  ( expression )? ")" statement ;
    *
    * ifStmt    → "if" "(" expression ")" statement ( "else" statement )? ;
    *
    * printStmt → "print" expression ";" ;
    *
    * returnStmt → "return" expression? ";" ;
    *
    * whileStmt → "while" "(" expression ")" statement ;
    *
    * breakStmt → "break" ";" 
    *             | "continue" ";" ;
    *
    * continueStmt → "continue" ";" ;
    *
    * block     → "{" declaration* "}" ;
    *
    * expression → comma ;
    *
    * comma → assignment ( "," assignment )* ;
    *
    * assignment → ( call "." )? identifier ( ( "=" 
    *               | "+=" | "-=" | "*=" | "/=" | "%=" 
    *               | "&=" | "|=" | "^="
    *               | "**=" | "<<=" | ">>=" ) assignment )? 
    *       | conditional ;
    *
    * conditional : logicOr "?" expression ":" conditional;
    *
    * logicOr   → logicAnd ( "or" logicAnd )* ;
    *
    * logicAnd  → bitwiseOr ( "and" bitwiseOr )* ;
    *
    * bitwiseOr → bitwiseXor ( ( "|" ) )* bitwiseXor ;
    *
    * bitwiseXor → bitwiseAnd ( ( "^" ) )* bitwiseAnd ;
    *
    * bitwiseAnd → equality ( ( "&" ) )* equality ;
    *
    * equality → comparison ( ( "!=" | "==" ) comparison )* ;
    * 
    * comparison → bitwiseShift ( ( ">" | ">=" | "<" | "<=" ) bitwiseShift )* ;
    *
    * bitwiseShift → addition ( ( "<<" | ">>" ) addition )* ;
    * 
    * addition → multiplication ( ( "+" | "-" ) multiplication )* ;
    *
    * multiplication → unary ( ( "/" | "*" | "%" ) unary )* ;
    *
    * unary → ( "!" | "-" | "+" | "++" | "--" | "~") unary 
    *           | exponentiation ;
    *
    * exponentiation → prefix ( ( "**" ) unary )* ;
    *
    * prefix → ( "--" | "++" ) primary 
    *           | postfix ;
    *
    * postfix → primary ( "--" | "++" ) 
    *           | call ;
    *
    * call → primary ( "(" arguments? ")" | "." IDENTIFIER )* ;
    *
    * primary → "true" | "false" | "nil"
    *        | NUMBER | STRING
    *        | "(" expression ")"
    *        | this
    *        | IDENTIFIER
    *        | lambda
    *        | "super" "." IDENTIFIER ;
    *
    * arguments → assignment ( "," assignment )* ;
    *
    * */
